--- a/mks-sistemas/package.json
+++ b/mks-sistemas/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -22,6 +25,17 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/testing-library__jest-dom": "^5.14.8",
+    "@vitest/ui": "^0.33.0",
+    "eslint-plugin-import": "^2.29.0",
+    "jsdom": "^22.1.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.33.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
