--- a/mks-sistemas/tsconfig.json
+++ b/mks-sistemas/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@assets/*": ["./src/assets/scss/*"],
       "@data/*": ["./src/data/*"],
       "@domain/*": ["./src/domain/*"],
       "@infrastructure/*": ["./src/infrastructure/*"],
@@ -18,6 +19,7 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "esModuleInterop":true,
     "noEmit": true,
     "jsx": "react-jsx",
 
@@ -27,6 +29,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "@testing-library/jest-dom"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
